mise en place de la section description

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="description">
+        Agé de 23 ans. Passionné d'informatique. Etudiant en deuxième année en Informatique Réseaux et Télécommunications,
+        je compte devenir developpeur full-stack.
+    </div>
 </body>
 </html>
