--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="formations">
+        Une année d'université à l'EPAC. 2018-2019 <br>
+        Six mois de formation à EIGB 2019-2020 <br>
+        Deux années d'université à ESGIS 2020-2021 et 2021-2022 
+    </div>
 </body>
 </html>
