mise en place de la section competences

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="competences">
+            -Maitrise moyenne en HTML , CSS et PHP <br>
+            -Maitrise moyenne en programmation C <br>
+            -Maitrise moyenne en programmation en JAVA <br>
+    </div>
 </body>
 </html>
