mise en place de la section associations

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="associations">
+            J'ai eu à travailler avec  deux entreprises privées comme LE "ROND POINT " une agence évènementielle <br>
+            avec qui j'ai toujours une étroite collaboration ainsi que le groupe EMPIRE.  
+    </div>
 </body>
 </html>
