mise en place de la section experiences

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="experiences">
+        Expérience de 4 mois de travail en entreprise.
+    </div>
 </body>
 </html>
